strapi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    kuma.io/sidecar-injection: enabled


# apiVersion: v1
# kind: Namespace
# metadata:
#   name: kong
#   namespace: kong
#   labels:
#     kuma.io/sidecar-injection: enabled
