strapi/strapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  labels:
    app: strapi
spec:
  ports:
  - name: https       ##This port is where ingress connects
    port: 1337
    targetPort: 1337
  selector:
    app: strapi 
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi 
  labels:
    app: strapi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi 
  template:
    metadata:
      labels:
        app: strapi 
    spec:
      containers:
      - name: strapi 
        image: alexyib/strapi-generic:v1   
        ports:
        - name: http
          containerPort: 1337
        volumeMounts:
        - name: certs
          mountPath: "/etc/certs"
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: strapi-ingress
